AUT-3612: spotless and refactor tests
run spotless and refactor code to pass SonarCloud quality gate